tests/ui/consts/issue-79137-toogeneric.stderr
error[E0158]: constant pattern cannot depend on generic parameters
  --> $DIR/issue-79137-toogeneric.rs:12:43
   |
LL | impl<T> GetVariantCount<T> {
   | --------------------------
LL |     pub const VALUE: usize = std::mem::variant_count::<T>();
   |     ---------------------- constant defined here
...
LL | const fn check_variant_count<T>() -> bool {
   |                              - constant depends on this generic parameter
LL |     matches!(GetVariantCount::<T>::VALUE, GetVariantCount::<T>::VALUE)
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `const` depends on a generic parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0158`.
